tests/ui/imports/ambiguous-8.stderr
error[E0659]: `Error` is ambiguous
  --> $DIR/ambiguous-8.rs:11:9
   |
LL | fn a<E: Error>(_: E) {}
   |         ^^^^^ ambiguous name
   |
   = note: ambiguous because of multiple glob imports of a name in the same module
note: `Error` could refer to the trait imported here
  --> $DIR/ambiguous-8.rs:9:5
   |
LL | use s::*;
   |     ^^^^
   = help: consider adding an explicit import of `Error` to disambiguate
note: `Error` could also refer to the enum imported here
  --> $DIR/ambiguous-8.rs:10:5
   |
LL | use ambiguous_8_extern::*;
   |     ^^^^^^^^^^^^^^^^^^^^^
   = help: consider adding an explicit import of `Error` to disambiguate

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0659`.
